# routersploit

./: ARCHITECTURE.md  Dockerfile  GAP_ANALYSIS.md  QUICKSTART.md  README.md  STATUS.md  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: INTEGRATION_STRATEGY.md  PYRO_API_MAPPING.md  PYRO_MCP_SETUP.md
mcp-servers/: claude-desktop-config-example.json  pyro-platform-ignition.json  pyro-platform-mcp.json  pyroutersploit-mcp.json
nodered/: README.md  package.json
nodered/nodes/: qkd-encrypt.js  scanner.html  scanner.js
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
rust/src/api/: auth.rs  mod.rs  pyro_types.rs  rest.rs  websocket.rs
rust/src/core/: exploit.rs  mod.rs  payload.rs  scanner.rs  session.rs
rust/src/crypto/: hashing.rs  mod.rs  pqc.rs  qkd.rs
rust/src/db/: cryptex.rs  mod.rs  models.rs  redb_client.rs
rust/src/mcp/: handlers.rs  mod.rs  schema.rs  server.rs
rust/src/nodered/: bridge.rs  mod.rs
rust/src/python_compat/: ffi.rs  mod.rs  module_loader.rs
scripts/: build.sh  run-dev.sh  test.sh
ui/: README.md  package.json
ui/src/lib/api/: client.ts
ui/src/routes/: +page.svelte
