[package]
name = "pyroutersploit"
version = "4.0.0"
edition = "2021"
authors = ["PyRouterSploit Team"]
description = "Cross-platform security exploitation framework with Rust core"
license = "MIT"
repository = "https://github.com/Ununp3ntium115/routersploit"

[lib]
name = "pyroutersploit"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pyroutersploit"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Database
redb = "2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Web framework & API
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Cryptography - Standard algorithms
sha2 = "0.10"
sha3 = "0.10"
blake2 = "0.10"
blake3 = "1.5"
ring = "0.17"
md5 = "0.7"
ripemd = "0.1"
hex = "0.4"
hmac = "0.12"
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"

# Post-quantum cryptography
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-sphincsplus = "0.6"
pqcrypto-falcon = "0.3"
pqcrypto-traits = "0.3"

# Networking
tokio-tungstenite = "0.21"
futures = "0.3"

# Python interop
pyo3 = { version = "0.20", features = ["auto-initialize"] }

# CLI & logging
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = "0.11"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
lazy_static = "1.4"
parking_lot = "0.12"
num_cpus = "1.16"

# MCP protocol
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"

# SSH/FTP clients
russh = "0.40"
suppaftp = "5.2"

# Configuration
config = "0.14"
toml = "0.8"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
mockall = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[[bench]]
name = "exploit_benchmark"
harness = false
